Ajouts compteur likes

--- a/html/medias.html
+++ b/html/medias.html
@@ -37,69 +37,132 @@
         <section class="section-media">
             <h2 class="titre-media">LES MÉDIAS</h2>
             <div id="liste" class="liste">
-                <a class="media" href="../assets/img/media/entrainement-2019.jpg">
-                    <img data-index="0" src="../assets/img/media/entrainement-2019.jpg">
-                </a>
-                <a class="media" href="../assets/img/media/entrainement-mai-2014-1.jpg">
-                    <img data-index="1" src="../assets/img/media/entrainement-mai-2014-1.jpg">
-                </a>
-                <a class="media" href="../assets/img/media/entrainement-mai-2014-2.jpg">
-                    <img data-index="2" src="../assets/img/media/entrainement-mai-2014-2.jpg">
-                </a>
-                <a class="media" href="../assets/img/media/entrainement-mai-2014.jpg">
-                    <img data-index="3" src="../assets/img/media/entrainement-mai-2014.jpg">
-                </a>
-                <a class="media" href="../assets/img/media/groupe-judokas.jpg">
-                    <img data-index="4" src="../assets/img/media/groupe-judokas.jpg">
-                </a>
-                <a class="media" href="../assets/img/media/new-ceintures-noires.jpg">
-                    <img data-index="5" src="../assets/img/media/new-ceintures-noires.jpg">
-                </a>
-                <a class="media" href="../assets/img/media/petits-judokas.jpg">
-                    <img data-index="6" src="../assets/img/media/petits-judokas.jpg">
-                </a>
-                <a class="media" href="../assets/img/media/remise-noire-laurence.jpg">
-                    <img data-index="7" src="../assets/img//media/remise-noire-laurence.jpg">
-                </a>
-                <a class="media" href="../assets/img/media/tatamis-2015.jpg">
-                    <img data-index="8" src="../assets/img/media/tatamis-2015.jpg">
-                </a>
-                <a class="media" href="../assets/img/judoka/ChristianBohn.jpg">
-                    <img data-index="9" src="../assets/img/judoka/ChristianBohn.jpg">
-                </a>
-                <a class="media" href="../assets/img/judoka/JackyKremer.jpg">
-                    <img data-index="10" src="../assets/img/judoka/JackyKremer.jpg">
-                </a>
-                <a class="media" href="../assets/img/judoka/LaurenceCalais.jpg">
-                    <img data-index="11" src="../assets/img/judoka/LaurenceCalais.jpg">
-                </a>
-                <a class="media" href="../assets/img/judoka/PascalScheaffer.jpg">
-                    <img data-index="12" src="../assets/img/judoka/PascalScheaffer.jpg">
-                </a>
-                <a class="media" href="../assets/img/judoka/ValentinDiedat.jpg">
-                    <img data-index="13" src="../assets/img/judoka/ValentinDiedat.jpg">
-                </a>
-                <a class="media" href="../assets/img/accueil/banderole.jpg">
-                    <img data-index="14" src="../assets/img/accueil/banderole.jpg">
-                </a>
-                <a class="media" href="../assets/img/media/stage-petits.jpg">
-                    <img data-index="15" src="../assets/img/media/stage-petits.jpg">
-                </a>
-                <a class="media" href="../assets/img/media/remise-enfant.jpg">
-                    <img data-index="16" src="../assets/img/media/remise-enfant.jpg">
-                </a>
-                <a class="media" href="../assets/img/media/new-ceintures-noires.jpg">
-                    <img data-index="17" src="../assets/img/media/new-ceintures-noires.jpg">
-                </a>
-                <a class="media" href="../assets/img/media/groupe-adulte.jpg">
-                    <img data-index="18" src="../assets/img/media/groupe-adulte.jpg">
-                </a>
-                <a class="media" href="../assets/img/media/ceintures-black.jpg">
-                    <img data-index="19" src="../assets/img/media/ceintures-black.jpg">
-                </a>
-                <a class="player-youtube media" href="https://www.youtube.com/embed/9R451906aao">
-                    <iframe width="350" height="350" src="https://www.youtube.com/embed/9R451906aao" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </a>
+                <div class="media-content">
+                    <a class="media" href="../assets/img/media/entrainement-2019.jpg">
+                        <img data-index="0" src="../assets/img/media/entrainement-2019.jpg">
+                    </a>
+                    <span class="nb-likes"><i class="far fa-heart coeur"></i>255 likes</span>
+                </div>
+                <div class="media-content">
+                    <a class="media" href="../assets/img/media/entrainement-mai-2014-1.jpg">
+                        <img data-index="1" src="../assets/img/media/entrainement-mai-2014-1.jpg">
+                    </a>
+                    <span class="nb-likes"><i class="far fa-heart coeur"></i>333  kiffs</span>
+                </div>
+                <div class="media-content">
+                    <a class="media" href="../assets/img/media/entrainement-mai-2014-2.jpg">
+                        <img data-index="2" src="../assets/img/media/entrainement-mai-2014-2.jpg">
+                    </a>
+                    <span class="nb-likes"><i class="far fa-heart coeur"></i>119 kiffs</span>
+                </div>
+                <div class="media-content">
+                    <a class="media" href="../assets/img/media/entrainement-mai-2014.jpg">
+                        <img data-index="3" src="../assets/img/media/entrainement-mai-2014.jpg">
+                    </a>
+                    <span class="nb-likes"><i class="far fa-heart coeur"></i>55 kiffs</span>
+                </div>
+                <div class="media-content">
+                    <a class="media" href="../assets/img/media/groupe-judokas.jpg">
+                        <img data-index="4" src="../assets/img/media/groupe-judokas.jpg">
+                    </a>
+                    <span class="nb-likes"><i class="far fa-heart coeur"></i>88 kiffs</span>
+                </div>
+                <div class="media-content">
+                    <a class="media" href="../assets/img/media/new-ceintures-noires.jpg">
+                        <img data-index="5" src="../assets/img/media/new-ceintures-noires.jpg">
+                    </a>
+                    <span class="nb-likes"><i class="far fa-heart coeur"></i>163 kiffs</span>
+                </div>
+                <div class="media-content">
+                    <a class="media" href="../assets/img/media/petits-judokas.jpg">
+                        <img data-index="6" src="../assets/img/media/petits-judokas.jpg">
+                    </a>
+                    <span class="nb-likes"><i class="far fa-heart coeur"></i>222 kiffs</span>
+                </div>
+                <div class="media-content">
+                    <a class="media" href="../assets/img/media/remise-noire-laurence.jpg">
+                        <img data-index="7" src="../assets/img//media/remise-noire-laurence.jpg">
+                    </a>
+                    <span class="nb-likes"><i class="far fa-heart coeur"></i>300 kiffs</span>
+                </div>
+                <div class="media-content">
+                    <a class="media" href="../assets/img/media/tatamis-2015.jpg">
+                        <img data-index="8" src="../assets/img/media/tatamis-2015.jpg">
+                    </a>
+                    <span class="nb-likes"><i class="far fa-heart coeur"></i>356 kiffs</span>
+                </div>
+                <div class="media-content">
+                    <a class="media" href="../assets/img/judoka/ChristianBohn.jpg">
+                        <img data-index="9" src="../assets/img/judoka/ChristianBohn.jpg">
+                    </a>
+                    <span class="nb-likes"><i class="far fa-heart coeur"></i>143  kiffs</span>
+                </div>
+                <div class="media-content">
+                    <a class="media" href="../assets/img/judoka/JackyKremer.jpg">
+                        <img data-index="10" src="../assets/img/judoka/JackyKremer.jpg">
+                    </a>
+                    <span class="nb-likes"><i class="far fa-heart coeur"></i>168 kiffs</span>
+                </div>
+                <div class="media-content">
+                    <a class="media" href="../assets/img/judoka/LaurenceCalais.jpg">
+                        <img data-index="11" src="../assets/img/judoka/LaurenceCalais.jpg">
+                    </a>
+                    <span class="nb-likes"><i class="far fa-heart coeur"></i>131 kiffs</span>
+                </div>
+                <div class="media-content">
+                    <a class="media" href="../assets/img/judoka/PascalScheaffer.jpg">
+                        <img data-index="12" src="../assets/img/judoka/PascalScheaffer.jpg">
+                    </a>
+                    <span class="nb-likes"><i class="far fa-heart coeur"></i>199 kiffs</span>
+                </div>
+                <div class="media-content">
+                    <a class="media" href="../assets/img/judoka/ValentinDiedat.jpg">
+                        <img data-index="13" src="../assets/img/judoka/ValentinDiedat.jpg">
+                    </a>
+                    <span class="nb-likes"><i class="far fa-heart coeur"></i>298 kiffs</span>
+                </div>
+                <div class="media-content">
+                    <a class="media" href="../assets/img/accueil/banderole.jpg">
+                        <img data-index="14" src="../assets/img/accueil/banderole.jpg">
+                    </a>
+                    <span class="nb-likes"><i class="far fa-heart coeur"></i>26 kiffs</span>
+                </div>
+                <div class="media-content">
+                    <a class="media" href="../assets/img/media/stage-petits.jpg">
+                        <img data-index="15" src="../assets/img/media/stage-petits.jpg">
+                    </a>
+                    <span class="nb-likes"><i class="far fa-heart coeur"></i>105 kiffs</span>
+                </div>
+                <div class="media-content">
+                    <a class="media" href="../assets/img/media/remise-enfant.jpg">
+                        <img data-index="16" src="../assets/img/media/remise-enfant.jpg">
+                    </a>
+                    <span class="nb-likes"><i class="far fa-heart coeur"></i>318 kiffs</span>
+                </div>
+                <div class="media-content">
+                    <a class="media" href="../assets/img/media/new-ceintures-noires.jpg">
+                        <img data-index="17" src="../assets/img/media/new-ceintures-noires.jpg">
+                    </a>
+                    <span class="nb-likes"><i class="far fa-heart coeur"></i>200 kiffs</span>
+                </div>
+                <div class="media-content">
+                    <a class="media" href="../assets/img/media/groupe-adulte.jpg">
+                        <img data-index="18" src="../assets/img/media/groupe-adulte.jpg">
+                    </a>
+                    <span class="nb-likes"><i class="far fa-heart coeur"></i>241 kiffs</span>
+                </div>
+                <div class="media-content">
+                    <a class="media" href="../assets/img/media/ceintures-black.jpg">
+                        <img data-index="19" src="../assets/img/media/ceintures-black.jpg">
+                    </a>
+                    <span class="nb-likes"><i class="far fa-heart coeur"></i>128 kiffs</span>
+                </div>
+                <div class="media-content">
+                    <a class="player-youtube media" href="https://www.youtube.com/embed/9R451906aao">
+                        <iframe width="350" height="350" src="https://www.youtube.com/embed/9R451906aao" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </a>
+                    <span class="nb-likes"><i class="far fa-heart coeur"></i>329 kiffs</span>
+                </div>
             </div>
         </section>
 
