--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
             <a href="html/reglements.html" class="naviguation">Réglements</a>
             <a href="html/medias.html" class="naviguation">Médias</a>
             <a href="html/contact.html" class="naviguation">Contact</a>
+            <a id="social" href="https://www.facebook.com/judoclubf/" class="social">
+                <img id="social-link" class="facebook" src="assets/img/accueil/facebook.png" alt="Facebook du judo-club">
+            </a>
         </nav>
     </header>
     <main>
@@ -44,21 +47,35 @@
                     <div class="info-activite">
                         <h3>Activité pour les tout-petits</h3>
                         <p class="description-activite">
-                            Le  « baby judo » s’adresse aux enfants, dès 5 ans. Le cours dure entre 45 et 60 minutes. Il s’agit surtout d’une initiation où les tout-petits apprennent à se servir de leurs capacités motrices. Le professeur de judo leur enseigne principalement à gérer leur appréhension des chutes et, peu à peu, le contact avec les autres enfants du groupe.
+                            Le  « baby judo » s’adresse aux enfants, dès 5 ans. Il s’agit surtout d’une initiation où les tout-petits apprennent à se servir de leurs capacités motrices. Le professeur de judo leur enseigne principalement à gérer leur appréhension des chutes et, peu à peu, le contact avec les autres enfants du groupe.
                         </p>
                         <p class="heure-activite">Les mercredis de 17h15 à 18h</p>
                         <span class="prix"><strong>90€/an</strong> (licence 30€ + cotisations annuelle 60€)</span><br>
                         <span class="detail-prix"><i>Possibilité de payé par trimestre</i></span>
                     </div>
                 </article>
+                <article class="ados article">
+                    <a href="html/membres.html" class="lien-equipe">
+                        <img src="assets/img/media/groupe-judokas.jpg" alt="des ados en kimono" class="img-activite">
+                    </a>
+                    <div class="info-activite">
+                        <h3>Activité pour les 9/14 ans</h3>
+                        <p class="description-activite">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est magnam a quod sunt expedita quae non molestiae vel, quisquam consequatur iusto, quia saepe, dolorem beatae illo recusandae vero cumque? Nobis.
+                        </p>
+                        <p class="heure-activite">Les mercredis de 18h15 à 19h15</p>
+                        <span class="prix"><strong>105€/an</strong> (licence 30€ + cotisations annuelle 75€)</span><br>
+                        <span class="detail-prix"><i>Possibilité de payé par trimestre</i></span>
+                    </div>
+                </article>
                 <article class="adultes article">
                     <a href="html/membres.html" class="lien-equipe">
-                        <img src="assets/img/media/groupe-judokas.jpg" alt="les judokas de Fénétrange" class="img-activite">
+                        <img src="assets/img/media/groupe-adulte.jpg" alt="les judokas de Fénétrange" class="img-activite">
                     </a>
                     <div class="info-activite">
                         <h3>Activité pour ado et adultes</h3>
                         <p class="description-activite">
-                            Le judo n’est pas une discipline comme toutes les autres. C’est un art martial qui développe les activités motrices fondamentales. Le judo enrichit les qualités comme la souplesse, la vitesse, l’anticipation, la puissance et la coordination. Les experts en psychomotricité utilisent le judo comme thérapie afin d’augmenter les capacités motrice d’une personne. Pratiquer le judo est une bonne manière de canaliser l’énergie.
+                            Le judo n’est pas une discipline comme toutes les autres. C’est un art martial qui développe les activités motrices fondamentales. Le judo enrichit les qualités comme la souplesse, la vitesse, l’anticipation, la puissance et la coordination.
                         </p>
                         <p class="heure-activite">Les mardis et vendredi de 19h30 à 21h00</p>
                         <span class="prix"><strong>120€/an</strong> (licence 30€ + cotisations annuelle 90€)</span><br>
