Révision lightbox media + page activité

--- a/index.html
+++ b/index.html
@@ -82,6 +82,20 @@
                         <span class="detail-prix"><i>Possibilité de payé par trimestre</i></span>
                     </div>
                 </article>
+                <article class="senior article">
+                    <a href="html/membres.html" class="lien-equipe">
+                        <img src="assets/img/media/senior.jpg" alt="les seniors" class="img-activite">
+                    </a>
+                    <div class="info-activite">
+                        <h3>Activité Atelier Senior</h3>
+                        <p class="description-activite">
+                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Est magnam a quod sunt expedita quae non molestiae vel, quisquam consequatur iusto, quia saepe, dolorem beatae illo recusandae vero cumque? Nobis.
+                        </p>
+                        <p class="heure-activite">Les lundis de 17h00 à 18h00</p>
+                        <span class="prix"><strong>135€/an</strong> (licence 30€ + cotisations annuelle 105€)</span><br>
+                        <span class="detail-prix"><i>Possibilité de payé par trimestre</i></span>
+                    </div>
+                </article>
             </div>
         </section>
     </main>
