Révision lightbox media + page activité

--- a/html/medias.html
+++ b/html/medias.html
@@ -168,7 +168,7 @@
                 </div>
                 <div class="media-content">
                   <a class="media video" href="../assets/img/media/DD-ministre.mp4">
-                      <video class="video" data-index="21" controls="" src="/assets/img/media/DD-ministre.mp4"></video>
+                      <video class="video" data-index="21" controls type="video/mp4" src="/assets/img/media/DD-ministre.mp4"></video>
                   </a>
                   <span class="nb-likes"><i class="far fa-heart coeur"></i>86 j'aime</span>
                 </div>
