Révision lightbox media + page activité

--- a/html/20-21/medias.html
+++ b/html/20-21/medias.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Site du judo club de Fénétrange. Activités du judo-club.">
     <meta name="keywords" content="judo, judogi, judoka, judokas, judokatte, judokattes, ceinture, ceintures, sports, sport, lorraine, moselle, fénétrange">
-    <link rel="shortcut icon" href="../assets/img/ceintures/Judo_red_white_belt.svg" type="image/x-icon">
-    <link rel="stylesheet" href="../styles/medias.css"/>
-    <link rel="stylesheet" href="../assets/Fontawesome/css/all.css">
+    <link rel="shortcut icon" href="../../assets/img/ceintures/Judo_red_white_belt.svg" type="image/x-icon">
+    <link rel="stylesheet" href="../../styles/medias.css"/>
+    <link rel="stylesheet" href="../../assets/Fontawesome/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&family=Source+Sans+Pro&display=swap" rel="stylesheet">
     <title>Gallerie du Judo-Club</title>
@@ -18,157 +18,158 @@
 
     <header>
         <div class="cadre-titre">
-            <img src="../assets/img/accueil/icon.svg" alt="logo du judo-club de Fénétrange" class="logo-jcf">
+            <img src="../../assets/img/accueil/icon.svg" alt="logo du judo-club de Fénétrange" class="logo-jcf">
             <h1 class="titre">JUDO CLUB<br> DE<br> FÉNÉTRANGE</h1>
-            <img src="../assets/img/accueil/Logo_FF_Judo_DA.svg" alt="logo FFJDA" class="logo-ffjda">
+            <img src="../../assets/img/accueil/Logo_FF_Judo_DA.svg" alt="logo FFJDA" class="logo-ffjda">
         </div>
         <nav>
-            <a href="../index.html" class="naviguation">Activités</a>
-            <a href="../html/membres.html" class="naviguation">Membres</a>
-            <a href="../html/agenda.html" class="naviguation">Agenda</a>
-            <a href="../html/actualites.html" class="naviguation">Actualités</a>
-            <a href="../html/resultats.html" class="naviguation">Résultats</a>
-            <a href="../html/reglements.html" class="naviguation">Réglements</a>
-            <a href="" class="naviguation page-active">Médias</a>
-            <a href="../html/contact.html" class="naviguation">Contact</a>
+            <a href="../../index.html" class="naviguation">Activités</a>
+            <a href="../../html/membres.html" class="naviguation">Membres</a>
+            <a href="../../html/agenda.html" class="naviguation">Agenda</a>
+            <a href="../../html/actualites.html" class="naviguation">Actualités</a>
+            <a href="../../html/resultats.html" class="naviguation">Résultats</a>
+            <a href="../../html/reglements.html" class="naviguation">Réglements</a>
+            <a href="../gallerie.html" class="naviguation page-active">Gallerie</a>
+            <a href="../../html/contact.html" class="naviguation">Contact</a>
             <a id="social" href="https://www.facebook.com/judoclubf/" class="social">
-                <img id="social-link" class="facebook" src="../assets/img/accueil/facebook.png" alt="Facebook du judo-club">
+                <img id="social-link" class="facebook" src="../../assets/img/accueil/facebook.png" alt="Facebook du judo-club">
             </a>
         </nav>
     </header>
     <main>
         <section class="section-media">
+            <a href="../gallerie.html" class="retour-gallerie"><i class="far fa-arrow-alt-circle-left icone-retour"></i></a>
             <h2 class="titre-media">LES MÉDIAS</h2>
             <div id="liste" class="liste">
                 <div class="media-content">
-                    <a class="media photo" href="../assets/img/media/entrainement-2019.jpg">
-                        <img data-index="0" src="../assets/img/media/entrainement-2019.jpg">
+                    <a class="media photo" href="../../assets/img/media/entrainement-2019.jpg">
+                        <img data-index="0" src="../../assets/img/media/entrainement-2019.jpg">
                     </a>
                     <span class="nb-likes"><i class="far fa-heart coeur"></i>255 j'aime</span>
                 </div>
                 <div class="media-content">
-                    <a class="media photo" href="../assets/img/media/entrainement-mai-2014-1.jpg">
-                        <img data-index="1" src="../assets/img/media/entrainement-mai-2014-1.jpg">
+                    <a class="media photo" href="../../assets/img/media/entrainement-mai-2014-1.jpg">
+                        <img data-index="1" src="../../assets/img/media/entrainement-mai-2014-1.jpg">
                     </a>
                     <span class="nb-likes"><i class="far fa-heart coeur"></i>333 j'aime</span>
                 </div>
                 <div class="media-content">
-                    <a class="media photo" href="../assets/img/media/entrainement-mai-2014-2.jpg">
-                        <img data-index="2" src="../assets/img/media/entrainement-mai-2014-2.jpg">
+                    <a class="media photo" href="../../assets/img/media/entrainement-mai-2014-2.jpg">
+                        <img data-index="2" src="../../assets/img/media/entrainement-mai-2014-2.jpg">
                     </a>
                     <span class="nb-likes"><i class="far fa-heart coeur"></i>119 j'aime</span>
                 </div>
                 <div class="media-content">
-                    <a class="media photo" href="../assets/img/media/entrainement-mai-2014.jpg">
-                        <img data-index="3" src="../assets/img/media/entrainement-mai-2014.jpg">
+                    <a class="media photo" href="../../assets/img/media/entrainement-mai-2014.jpg">
+                        <img data-index="3" src="../../assets/img/media/entrainement-mai-2014.jpg">
                     </a>
                     <span class="nb-likes"><i class="far fa-heart coeur"></i>55 j'aime</span>
                 </div>
                 <div class="media-content">
-                    <a class="media photo" href="../assets/img/media/groupe-judokas.jpg">
-                        <img data-index="4" src="../assets/img/media/groupe-judokas.jpg">
+                    <a class="media photo" href="../../assets/img/media/groupe-judokas.jpg">
+                        <img data-index="4" src="../../assets/img/media/groupe-judokas.jpg">
                     </a>
                     <span class="nb-likes"><i class="far fa-heart coeur"></i>88 j'aime</span>
                 </div>
                 <div class="media-content">
-                    <a class="media photo" href="../assets/img/media/new-ceintures-noires.jpg">
-                        <img data-index="5" src="../assets/img/media/new-ceintures-noires.jpg">
+                    <a class="media photo" href="../../assets/img/media/new-ceintures-noires.jpg">
+                        <img data-index="5" src="../../assets/img/media/new-ceintures-noires.jpg">
                     </a>
                     <span class="nb-likes"><i class="far fa-heart coeur"></i>163 j'aime</span>
                 </div>
                 <div class="media-content">
-                    <a class="media photo" href="../assets/img/media/petits-judokas.jpg">
-                        <img data-index="6" src="../assets/img/media/petits-judokas.jpg">
+                    <a class="media photo" href="../../assets/img/media/petits-judokas.jpg">
+                        <img data-index="6" src="../../assets/img/media/petits-judokas.jpg">
                     </a>
                     <span class="nb-likes"><i class="far fa-heart coeur"></i>222 j'aime</span>
                 </div>
                 <div class="media-content">
-                    <a class="media photo" href="../assets/img/media/remise-noire-laurence.jpg">
-                        <img data-index="7" src="../assets/img//media/remise-noire-laurence.jpg">
+                    <a class="media photo" href="../../assets/img/media/remise-noire-laurence.jpg">
+                        <img data-index="7" src="../../assets/img//media/remise-noire-laurence.jpg">
                     </a>
                     <span class="nb-likes"><i class="far fa-heart coeur"></i>300 j'aime</span>
                 </div>
                 <div class="media-content">
-                    <a class="media photo" href="../assets/img/media/tatamis-2015.jpg">
-                        <img data-index="8" src="../assets/img/media/tatamis-2015.jpg">
+                    <a class="media photo" href="../../assets/img/media/tatamis-2015.jpg">
+                        <img data-index="8" src="../../assets/img/media/tatamis-2015.jpg">
                     </a>
                     <span class="nb-likes"><i class="far fa-heart coeur"></i>356 j'aime</span>
                 </div>
                 <div class="media-content">
-                    <a class="media photo" href="../assets/img/judoka/ChristianBohn.jpg">
-                        <img data-index="9" src="../assets/img/judoka/ChristianBohn.jpg">
+                    <a class="media photo" href="../../assets/img/judoka/ChristianBohn.jpg">
+                        <img data-index="9" src="../../assets/img/judoka/ChristianBohn.jpg">
                     </a>
                     <span class="nb-likes"><i class="far fa-heart coeur"></i>143  j'aime</span>
                 </div>
                 <div class="media-content">
-                    <a class="media photo" href="../assets/img/judoka/JackyKremer.jpg">
-                        <img data-index="10" src="../assets/img/judoka/JackyKremer.jpg">
+                    <a class="media photo" href="../../assets/img/judoka/JackyKremer.jpg">
+                        <img data-index="10" src="../../assets/img/judoka/JackyKremer.jpg">
                     </a>
                     <span class="nb-likes"><i class="far fa-heart coeur"></i>168 j'aime</span>
                 </div>
                 <div class="media-content">
-                    <a class="media photo" href="../assets/img/judoka/LaurenceCalais.jpg">
-                        <img data-index="11" src="../assets/img/judoka/LaurenceCalais.jpg">
+                    <a class="media photo" href="../../assets/img/judoka/LaurenceCalais.jpg">
+                        <img data-index="11" src="../../assets/img/judoka/LaurenceCalais.jpg">
                     </a>
                     <span class="nb-likes"><i class="far fa-heart coeur"></i>131 j'aime</span>
                 </div>
                 <div class="media-content">
-                    <a class="media photo" href="../assets/img/judoka/PascalScheaffer.jpg">
-                        <img data-index="12" src="../assets/img/judoka/PascalScheaffer.jpg">
+                    <a class="media photo" href="../../assets/img/judoka/PascalScheaffer.jpg">
+                        <img data-index="12" src="../../assets/img/judoka/PascalScheaffer.jpg">
                     </a>
                     <span class="nb-likes"><i class="far fa-heart coeur"></i>199 j'aime</span>
                 </div>
                 <div class="media-content">
-                    <a class="media photo" href="../assets/img/judoka/ValentinDiedat.jpg">
-                        <img data-index="13" src="../assets/img/judoka/ValentinDiedat.jpg">
+                    <a class="media photo" href="../../assets/img/judoka/ValentinDiedat.jpg">
+                        <img data-index="13" src="../../assets/img/judoka/ValentinDiedat.jpg">
                     </a>
                     <span class="nb-likes"><i class="far fa-heart coeur"></i>298 j'aime</span>
                 </div>
                 <div class="media-content">
-                    <a class="media photo" href="../assets/img/accueil/banderole.jpg">
-                        <img data-index="14" src="../assets/img/accueil/banderole.jpg">
+                    <a class="media photo" href="../../assets/img/accueil/banderole.jpg">
+                        <img data-index="14" src="../../assets/img/accueil/banderole.jpg">
                     </a>
                     <span class="nb-likes"><i class="far fa-heart coeur"></i>26 j'aime</span>
                 </div>
                 <div class="media-content">
-                    <a class="media photo" href="../assets/img/media/stage-petits.jpg">
-                        <img data-index="15" src="../assets/img/media/stage-petits.jpg">
+                    <a class="media photo" href="../../assets/img/media/stage-petits.jpg">
+                        <img data-index="15" src="../../assets/img/media/stage-petits.jpg">
                     </a>
                     <span class="nb-likes"><i class="far fa-heart coeur"></i>105 j'aime</span>
                 </div>
                 <div class="media-content">
-                    <a class="media photo" href="../assets/img/media/remise-enfant.jpg">
-                        <img data-index="16" src="../assets/img/media/remise-enfant.jpg">
+                    <a class="media photo" href="../../assets/img/media/remise-enfant.jpg">
+                        <img data-index="16" src="../../assets/img/media/remise-enfant.jpg">
                     </a>
                     <span class="nb-likes"><i class="far fa-heart coeur"></i>318 j'aime</span>
                 </div>
                 <div class="media-content">
-                    <a class="media photo" href="../assets/img/media/new-ceintures-noires.jpg">
-                        <img data-index="17" src="../assets/img/media/new-ceintures-noires.jpg">
+                    <a class="media photo" href="../../assets/img/media/new-ceintures-noires.jpg">
+                        <img data-index="17" src="../../assets/img/media/new-ceintures-noires.jpg">
                     </a>
                     <span class="nb-likes"><i class="far fa-heart coeur"></i>200 j'aime</span>
                 </div>
                 <div class="media-content">
-                    <a class="media photo" href="../assets/img/media/groupe-adulte.jpg">
-                        <img data-index="18" src="../assets/img/media/groupe-adulte.jpg">
+                    <a class="media photo" href="../../assets/img/media/groupe-adulte.jpg">
+                        <img data-index="18" src="../../assets/img/media/groupe-adulte.jpg">
                     </a>
                     <span class="nb-likes"><i class="far fa-heart coeur"></i>241 j'aime</span>
                 </div>
                 <div class="media-content">
-                    <a class="media photo" href="../assets/img/media/ceintures-black.jpg">
-                        <img data-index="19" src="../assets/img/media/ceintures-black.jpg">
+                    <a class="media photo" href="../../assets/img/media/ceintures-black.jpg">
+                        <img data-index="19" src="../../assets/img/media/ceintures-black.jpg">
                     </a>
                     <span class="nb-likes"><i class="far fa-heart coeur"></i>128 j'aime</span>
                 </div>
                 <div class="media-content">
-                  <a class="media photo" href="../assets/img/media/senior.jpg">
-                      <img data-index="20" src="../assets/img/media/senior.jpg">
+                  <a class="media photo" href="../../assets/img/media/senior.jpg">
+                      <img data-index="20" src="../../assets/img/media/senior.jpg">
                   </a>
                   <span class="nb-likes"><i class="far fa-heart coeur"></i>188 j'aime</span>
                 </div>
                 <div class="media-content">
-                  <a class="media video" href="../assets/img/media/DD-ministre.mp4">
-                      <video class="video" data-index="21" type="video/mp4" src="../assets/img/media/DD-ministre.mp4"></video>
+                  <a class="media video" href="../../assets/img/media/DD-ministre.mp4">
+                      <video class="video" data-index="21" type="video/mp4" src="../../assets/img/media/DD-ministre.mp4"></video>
                   </a>
                   <span class="nb-likes"><i class="far fa-heart coeur"></i>86 j'aime</span>
                 </div>
@@ -192,6 +193,6 @@
             </div>
         </div>
     </main>
-    <script src="../js/medias.js"></script>
+    <script src="../../js/medias.js"></script>
 </body>
 </html>
