--- a/html/gallerie.html
+++ b/html/gallerie.html
@@ -7,11 +7,11 @@
     <meta name="description" content="Site du judo club de Fénétrange. Activités du judo-club.">
     <meta name="keywords" content="judo, judogi, judoka, judokas, judokatte, judokattes, ceinture, ceintures, sports, sport, lorraine, moselle, fénétrange">
     <link rel="shortcut icon" href="../assets/img/ceintures/Judo_red_white_belt.svg" type="image/x-icon">
-    <link rel="stylesheet" href="../styles/agenda.css"/>
+    <link rel="stylesheet" href="../styles/gallerie.css"/>
     <link rel="stylesheet" href="../assets/Fontawesome/css/all.css">
     <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caesar+Dressing&family=Source+Sans+Pro&display=swap" rel="stylesheet">
-    <title>Agenda du Judo-Club</title>
+    <title>Gallerie du Judo-Club</title>
 </head>
 
 <body>
@@ -25,11 +25,11 @@
         <nav>
             <a href="../index.html" class="naviguation">Activités</a>
             <a href="../html/membres.html" class="naviguation">Membres</a>
-            <a href="" class="naviguation page-active">Agenda</a>
+            <a href="../html/agenda.html" class="naviguation">Agenda</a>
             <a href="../html/actualites.html" class="naviguation">Actualités</a>
             <a href="../html/resultats.html" class="naviguation">Résultats</a>
             <a href="../html/reglements.html" class="naviguation">Réglements</a>
-            <a href="../html/gallerie.html" class="naviguation">Gallerie</a>
+            <a href="" class="naviguation page-active">Gallerie</a>
             <a href="../html/contact.html" class="naviguation">Contact</a>
             <a id="social" href="https://www.facebook.com/judoclubf/" class="social">
                 <img id="social-link" class="facebook" src="../assets/img/accueil/facebook.png" alt="Facebook du judo-club">
@@ -37,11 +37,16 @@
         </nav>
     </header>
     <main>
-        <section class="section-activite">
-            <h2 class="titre-activite">ACTIVITÉS DU JUDO-CLUB</h2>
-
+        <section class="section-media">
+            <h2 class="titre-media">LA GALLERIE DES MÉDIAS</h2>
+            <div id="liste" class="liste">
+                <a href="../html/20-21/medias.html" class="link-media-saison"><i class="fas fa-photo-video icone-saison"></i><p class="link-folder">Saison 2020/2021</p></a>
+                <a href="../html/20-21/medias.html" class="link-media"><i class="fas fa-photo-video icone"></i><p class="link-folder">Saison 2019/2020</p></a>
+                <a href="../html/20-21/medias.html" class="link-media"><i class="fas fa-photo-video icone"></i><p class="link-folder">Saison 2018/2019</p></a>
+                <a href="../html/20-21/medias.html" class="link-media"><i class="fas fa-photo-video icone"></i><p class="link-folder">Saison 2017/2018</p></a>
+            </div>
         </section>
     </main>
-    <script src="../js/agenda.js"></script>
+    <script src="../js/gallerie.js"></script>
 </body>
 </html>
