--- a/html/resultats.html
+++ b/html/resultats.html
@@ -29,7 +29,7 @@
             <a href="../html/actualites.html" class="naviguation">Actualités</a>
             <a href="" class="naviguation page-active">Résultats</a>
             <a href="../html/reglements.html" class="naviguation">Réglements</a>
-            <a href="../html/medias.html" class="naviguation">Médias</a>
+            <a href="../html/gallerie.html" class="naviguation">Gallerie</a>
             <a href="../html/contact.html" class="naviguation">Contact</a>
             <a id="social" href="https://www.facebook.com/judoclubf/" class="social">
                 <img id="social-link" class="facebook" src="../assets/img/accueil/facebook.png" alt="Facebook du judo-club">
